--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+
+
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: black ;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #707070;
+  border-radius: 10px;
+}
